--- a/Day1_Filehandling.ipynb
+++ b/Day1_Filehandling.ipynb
@@ -16,12 +16,60 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "2e8MQAkenGOv"
+        "id": "2e8MQAkenGOv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa4ab3ed-a3bf-44d5-e5df-9affb7e4963a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['I', 'live', 'in', 'kochin']\n",
+            "4\n"
+          ]
+        }
+      ],
+      "source": [
+        "Sp =\"I live in kochin\".split()\n",
+        "print(Sp)\n",
+        "num_words = len(Sp)\n",
+        "print(num_words)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = open(\"aaa.txt\" , 'r')\n",
+        "k = f.readlines()\n",
+        "print(k)"
+      ],
+      "metadata": {
+        "id": "NJ3WcrUeCzyd",
+        "outputId": "cb3a4086-f38c-4915-c79a-a9a6f6b9bbcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'aaa.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-875eb6cb8017>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"aaa.txt\"\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'aaa.txt'"
+          ]
+        }
+      ]
     }
   ]
 }
